<resources>
    <string name="app_name">BrilliantGolf</string>
    <string-array name="color">
        <item>Ball Color</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Black</item>
        <item>Green</item>
        <item>Purple</item>
        <item>White</item>

    </string-array>
    <string-array name="colorVal">
        <item>#ffffff</item>
        <item>#FF0000</item>
        <item>#3F51B5</item>
        <item>#FF5722</item>
        <item>#FFEB3B</item>
        <item>#000000</item>
        <item>#4CAF50</item>
        <item>#673AB7</item>
        <item>#ffffff</item>

    </string-array>
    <!---Scorecard-->

    <string-array name="number_of_holes">
        <item>Hole number</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="number_of_strokes">
        <item>Select Total Strokes</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--Main Page-->
    <string name="welcome_message">Welcome to BrilliantGolf</string>
    <string name="copyright">Copyright © 2021 theBrilliants’ Inc, All rights reserved.</string>
    <string name="new_game">New Game</string>
    <string name="load_saved_games">Resume Game</string>

    <!--Help Page-->
    <string name="help">Help</string>
    <string name="help_text">
        Let\&apos;s explain how everything works!<br /><br /><br />
        <b>New Game: </b>This is button will direct you to a page where you create a new game.<br /><br />
        <b>Resume Game: </b>Resume a game in progress if there is one.<br /><br /><br />
        <b>Creating a game: </b><br /><br />
        Enter the name and ball color of each player and click add. When you are done, press &#8220;LET\&apos;S PLAY.&#8221;
        Note that only four players can be added per game.<br /><br /><br />
        <b>Keeping score: </b><br /><br />
        Choose the hole you are on, and enter the number of strokes made by each player for that particular hole.
        The total score for each player is added automatically. When you are done playing, simply hit
        the &#8220;END GAME&#8221; button.
    </string>


    <!--New Game Page-->
    <string name="play">Let\&apos;s Play!</string>
    <string name="enter_game_title_here">Enter game title here</string>
    <string name="instructions_new_game">Enter player names and ball colors. Maximum 4 players.</string>
    <string name="add_players">Add Players</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>

    <!--Saved Games Page-->
    <string name="saved_games">Saved Games</string>

    <!--Scoreboard-->
    <string name="strokes">Strokes</string>
    <string name="current_hole">Current Hole</string>
    <string name="full_scorecard">Full Scorecard</string>
    <string name="total_score">Total Score</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="default_score">0</string>
    <string name="player">Player</string>
    <string name="placeholder">Placeholder Name</string>
    <string name="next_hole">Next<br />Hole</string>
    <string name="previous_hole">Previous<br />Hole</string>
    <string name="finish">End Game</string>


    <!--Navigation-->
    <string name="back">Back</string>
    <string name="logo">logo</string>


</resources>