<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="105dp"
        android:layout_marginTop="30dp"
        android:clickable="false"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="#0fb861"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/help"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadSGButton"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/loadSGButton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/load_saved_games"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="17dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/copyright"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>